<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <LinearLayout style="@style/TeamLinearLayout">

            <TextView
                style="@style/TeamNameStyle"
                android:text="@string/team_a" />

            <TextView
                android:id="@+id/team_a_score_view"
                style="@style/ScoreTextViewStyle"
                android:text="@string/initial_score" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="TryForTeamA"
                android:text="@string/score_using_try" />

            <Button
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/second_button_margin_top"
                android:layout_marginBottom="@dimen/second_button_margin_bottom"
                android:onClick="GoalKickForTeamA"
                android:text="@string/score_using_goal_kick" />

            <Button
                style="@style/ButtonStyle"
                android:layout_marginBottom="@dimen/third_button_margin_bottom"
                android:onClick="PenaltyForTeamA"
                android:text="@string/score_using_penalty" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="DropGoalForTeamA"
                android:text="@string/score_using_drop_goal" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary" />

        <LinearLayout style="@style/TeamLinearLayout">

            <TextView
                style="@style/TeamNameStyle"
                android:text="@string/team_b" />

            <TextView
                android:id="@+id/team_b_score_view"
                style="@style/ScoreTextViewStyle"
                android:text="@string/initial_score" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="TryForTeamB"
                android:text="@string/score_using_try" />

            <Button
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/second_button_margin_top"
                android:layout_marginBottom="@dimen/second_button_margin_bottom"
                android:onClick="GoalKickForTeamB"
                android:text="@string/score_using_goal_kick" />

            <Button
                style="@style/ButtonStyle"
                android:layout_marginBottom="@dimen/third_button_margin_bottom"
                android:onClick="PenaltyForTeamB"
                android:text="@string/score_using_penalty" />

            <Button
                style="@style/ButtonStyle"
                android:onClick="DropGoalForTeamB"
                android:text="@string/score_using_drop_goal" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/reset_button_margin_bottom"
        android:background="@color/colorPrimary"
        android:onClick="resetScore"
        android:text="@string/reset_button"
        android:textAllCaps="true"
        android:textColor="@android:color/white" />
</RelativeLayout>